# recipes_mgmt

./: .gitignore  README.md  manage.py  pyproject.toml
chef_backend/: asgi.py  settings.py  urls.py  wsgi.py
core/management/commands/: seed_data.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.vue  style.css
frontend/src/components/: AppModal.vue  ComboBox.vue
frontend/src/i18n/: index.ts
frontend/src/router/: index.ts
frontend/src/types/: index.ts
frontend/src/views/: DashboardView.vue  IngredientsView.vue  ProductionView.vue  RecipesView.vue
ingredients/: models.py  views.py
ingredients/migrations/: 0001_initial.py
printing/: services.py
production/: models.py  serializers.py  views.py
production/migrations/: 0001_initial.py
recipes/: models.py  serializers.py  services.py  views.py
recipes/migrations/: 0001_initial.py  0002_remove_calc_method_yield_fields.py  0003_recipe_total_weight.py
