[project]
name = "chef-agent-gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.15",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "pyyaml>=6.0.3",
    "setuptools>=82.0.1",
]
